new: Add Greenlight-backed protected fog controls
(cherry picked from commit 9ad3eb7f956336ff16bdf26238c92a549e7b9c12)